# pypi-pkg-prac

./: README.md  newfileblabal  notes.md  pyproject.toml
.github/workflows/: publish.yml
src/example_package_coolport/: example.py
