[project]
name = "example_package_coolport"
version = "0.0.2"
authors = [{ name = "Aidan Alcayde", email = "aidanalcayde@gmail.com" }]
description = "simple last.fm scrobbling daemon"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"
